--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.google.code.gson:gson:2.2.4'
-    implementation 'com.jakewharton:butterknife:5.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
